fix spacing

--- a/index.css
+++ b/index.css
@@ -1245,6 +1245,14 @@ body {
   padding-right: 0px;
 }
 
+.nya-cmd-word-r:has(
+    + .nya-cmd-dot:last-child,
+    + .nya-cmd-dot + .nya-cursor:last-child,
+    + .nya-cursor + .nya-cmd-dot:last-child
+  ) {
+  padding-right: 0px;
+}
+
 .nya-cmd-dot-r + .nya-cmd-word-l,
 .nya-cmd-dot-r + .nya-cursor + .nya-cmd-word-l {
   padding-left: 0px;
@@ -1255,7 +1263,7 @@ body {
   padding-left: 0px;
 }
 
-.nya-cmd-word-r:has(+ .nya-cmd-dot-prop, .nya-cursor + .nya-cmd-dot-prop) {
+.nya-cmd-word-r:has(+ .nya-cmd-dot-prop, + .nya-cursor + .nya-cmd-dot-prop) {
   padding-right: 0px;
 }
 
